Batch add 1 solutions: 1670.design-front-mi...